data/derived/sp14/progs/unify/prog0417.ml.out
Characters 20-31:
  let _ = List.append((clone 0 3) [1;2;3]);;
                      ^^^^^^^^^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
